[gd_scene load_steps=3 format=2]

[ext_resource path="res://ui/OptionsMenu.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui/MainMenu.gd" type="Script" id=2]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Main" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="ColorRect" type="ColorRect" parent="Main"]
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0.14902, 0.14902, 0.14902, 0.67451 )

[node name="StartButton" type="Button" parent="Main"]
margin_left = 524.0
margin_top = 206.0
margin_right = 780.0
margin_bottom = 286.0
text = "Start Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsButton" type="Button" parent="Main"]
margin_left = 524.0
margin_top = 326.0
margin_right = 780.0
margin_bottom = 406.0
text = "Options"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitButton" type="Button" parent="Main"]
margin_left = 524.0
margin_top = 446.0
margin_right = 780.0
margin_bottom = 526.0
text = "Exit Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsMenu" parent="." instance=ExtResource( 1 )]
visible = false
[connection signal="pressed" from="Main/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="Main/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="Main/ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="options_closed" from="OptionsMenu" to="." method="_on_OptionsMenu_options_closed"]
